updating our details

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>Where I'm from</h1>
       <p>I'm from Doylestown Pennsylvania.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>I like to work out read.</p>
+      <p>I like to work out and read.</p>
       <h1>What's your dream job?</h1>
       <p>My dream job is a to be a Foreign Service Officer.</p>
       <h1>Where do you live?</h1>
